app/identity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: fmahdi09/identity:1.12.5
