app/identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: identity
spec:
  selector:
    app: identity
  ports:
    - port: 80
      targetPort: 8080
