app/identity/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: identity-route
  namespace: identity
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system

  hostnames:
    - auth.tikalonline.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: identity
          port: 80
